# cmake_external_project

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
